# peillute

./: Cargo.toml  Dockerfile  README.md  docker-compose-all.yml  docker-compose-test.yml  docker-compose.yml  loki-config.yml  prometheus.yml
grafana/dashboards/: peillute-dashboard.json  peillute-logs-dashboard.json
grafana/provisioning/dashboards/: default.yml
grafana/provisioning/datasources/: loki.yml
src/: clock.rs  control.rs  db.rs  main.rs  message.rs  metrics.rs  network.rs  open_telemetry.rs  snapshot.rs  state.rs  utils.rs
src/views/: actions.rs  info.rs
