[package]
name = "peillute"
version = "0.1.0"
authors = [
    "Aubin Vert",
    "Théo Guegan",
    "Alexandre Eberhardt",
    "Léopold Chappuis",
]
edition = "2024"

[dependencies]
dioxus = { version = "0.6.1", features = ["router", "fullstack"] }
dioxus-cli-config = { version = "0.6.1", optional = true }
tokio = { version = "1.44.1", features = ["full"], optional = true }
rusqlite = { version = "0.34.0", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
clap = { version = "4.5.35", features = ["derive"] }
axum = { version = "0.7.0", optional = true }
lazy_static = "1.5.0"
rmp-serde = "1.3.0"
serde_json = "1.0.140"
chrono = "0.4.41"
pnet = { version = "0.35.0", optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
tracing-opentelemetry = { version = "0.27", optional = true }
opentelemetry = { version = "0.26", features = ["trace", "logs", "metrics"], optional = true }
opentelemetry_sdk = { version = "0.26", features = ["rt-tokio", "logs", "metrics"], optional = true }
opentelemetry-stdout = { version = "0.26", optional = true }
opentelemetry-appender-tracing = { version = "0.26", optional = true }
opentelemetry-otlp = { version = "0.26", features = [
  "grpc-tonic",
  "http-proto",
  "metrics",
  "reqwest-client",
  "reqwest-rustls",
  "logs"
], optional = true }
opentelemetry-semantic-conventions = { version = "0.26", optional = true }
prometheus = "0.14"
once_cell = "1"

[features]
default = ["server"]
server = [
    "dioxus/server",
    "dep:axum",
    "dep:tokio",
    "dep:rusqlite",
    "dep:pnet",
    "dioxus-cli-config",
    "dep:tracing-subscriber",
    "dep:tracing-opentelemetry",
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-stdout",
    "dep:opentelemetry-appender-tracing",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry-semantic-conventions",
]
web = ["dioxus/web"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
